fix(styles): replace adjacent sibling combinator with `column-gap` property
OUI-1938

--- a/projects/oblique/src/styles/scss/core/components/_form.scss
+++ b/projects/oblique/src/styles/scss/core/components/_form.scss
@@ -131,9 +131,6 @@ textarea {
 .ob-inline-form {
 	display: flex;
 	flex-wrap: wrap;
+	column-gap: variables.$ob-spacing-default;
 	word-break: normal;
-
-	> * + * {
-		margin-left: variables.$ob-spacing-default;
-	}
 }
